syntax = "proto3";
package com.temas.aimaster;

import public "common.proto";

message Stone {
    int32 id = 1;
    int64 timeDelta = 2;
    Vector2 startPoint = 3;
    Vector2 velocity = 4;
}

message ClientData {
    int64 timeStamp = 1;
    repeated Stone stones = 2;
}

